# summarize

./: .gitignore  Cargo.toml  README.md  prompt.md  rustfmt.toml
src/: files.rs  lib.rs  main.rs
