[package]
name = "summarize"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
futures-util = "0.3.31"
genai = "0.1.23"
glob = "0.3.2"
ignore = "0.4.23"
itertools = "0.14.0"
rand = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[lints.rust]
unused = "allow"
